--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
-name = grapple
+name = wagtail-grapple
 author = Nathan Horrigan
 author_email = NathHorrigan@gmail.com
 description = A django app that speeds up and simplifies implementing a GraphQL endoint!
-version = 0.0.3
-url = https://github.com/NathHorrigan/grapple
+version = 0.0.5
+url = https://github.com/NathHorrigan/wagtail-grapple
 keywords =
   wagtail
   django
@@ -17,7 +17,7 @@ classifiers =
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
   Topic :: Scientific/Engineering
-long_description = file: README.md
+long_description = file:README.md
 long_description_content_type = text/markdown
 license_files =
   LICENSE.txt
