--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ python_requires = >= 2.7
 setup_requires =
   setuptools >= 40.6
   pip >= 10
+include_package_data = true
 packages = find:
 install_requires =
     Django>=2.2, <2.3
