--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,9 +30,10 @@ jobs:
       - run:
           name: install dependencies
           command: |
+            cd example
             python3 -m venv venv
             . venv/bin/activate
-            pip install -r example/requirements.txt
+            pip install -r requirements.txt
 
       - save_cache:
           paths:
@@ -47,8 +48,9 @@ jobs:
       - run:
           name: run tests
           command: |
+            cd example
             . venv/bin/activate
-            python example/manage.py test
+            python manage.py test
 
       - store_artifacts:
           path: test-reports
