--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,9 +9,7 @@ jobs:
       # specify the version you desire here
       # use `-browsers` prefix for selenium tests, e.g. `3.6.1-browsers`
       - image: circleci/python:3.6.1
-      - command: |
-        apt-get install git-lfs
-        git lfs install
+      - command: apt-get install git-lfs && git lfs install
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
