Add mising cocecs import

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = wagtail-grapple
 author = Nathan Horrigan
 author_email = NathHorrigan@gmail.com
 description = A django app that speeds up and simplifies implementing a GraphQL endoint!
-version = 0.1.6
+version = 0.1.7
 url = https://github.com/torchbox/wagtail-grapple
 keywords =
   wagtail
@@ -38,3 +38,4 @@ install_requires =
     channels==1.1.8
     asgi_redis
     graphql_ws
+    scour==0.37
