--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,6 +57,7 @@ jobs:
           command: |
             cd example
             . venv/bin/activate
+            rm db.sqlite3
             python manage.py migrate
             python manage.py test
 
