--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
 
-    working_directory: ~/repo/example
+    working_directory: ~/repo
 
     steps:
       - checkout
@@ -30,6 +30,7 @@ jobs:
       - run:
           name: install dependencies
           command: |
+            cd example
             python3 -m venv venv
             . venv/bin/activate
             pip install -r requirements.txt
@@ -47,7 +48,10 @@ jobs:
       - run:
           name: run tests
           command: |
+            cd example
             . venv/bin/activate
+            rm db.sqlite3
+            python manage.py migrate
             python manage.py test
 
       - store_artifacts:
