--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,7 @@ jobs:
           command: |
             cd example
             . venv/bin/activate
+            rm db.sqlite3	
             python manage.py migrate
             python manage.py test
       - store_artifacts:
