--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,4 @@ factory-boy==2.12.0
 wagtail-factories==2.0.0
 django-cors-headers==3.0.2
 scour==0.37
-git+https://github.com/zerolab/wagtail-headless-preview.git@46b655e#egg=wagtail-headless-preview
+wagtail-headless-preview==0.1.0
