--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = wagtail-grapple
 author = Nathan Horrigan
 author_email = NathHorrigan@gmail.com
 description = A django app that speeds up and simplifies implementing a GraphQL endoint!
-version = 0.4.8
+version = 0.4.10
 url = https://github.com/torchbox/wagtail-grapple
 keywords =
   wagtail
@@ -32,7 +32,7 @@ packages = find:
 install_requires =
     Django>=2.2, <2.3
     wagtail>=2.5, <2.8
-    graphene-django>=2.2.0
+    graphene-django==2.7.1
     graphql-core==2.2.1
     colorthief
     channels==1.1.8
