chore: fix typos, update links, and lint yml files

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name = wagtail-grapple
 author = Nathan Horrigan
-author_email = NathHorrigan@gmail.com
-description = A django app that speeds up and simplifies implementing a GraphQL endoint!
+author_email = nathan.horrigan@torchbox.com
+description = A Django app that speeds up and simplifies implementing a GraphQL endpoint!
 version = 0.5.1
-url = https://github.com/torchbox/wagtail-grapple
+url = https://github.com/GrappleGQL/wagtail-grapple
 keywords =
   wagtail
   django
