chore: update to single-sourcing version

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = wagtail-grapple
 author = Nathan Horrigan
 author_email = nathan.horrigan@torchbox.com
 description = A Django app that speeds up and simplifies implementing a GraphQL endpoint!
-version = 0.5.5
+version = attr: grapple.__version__
 url = https://github.com/GrappleGQL/wagtail-grapple
 keywords =
   wagtail
