Tidy up requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,7 @@ install_requires =
 
 [options.extras_require]
 channels =
+    Django>=2.2, <2.3
     channels==1.1.8
     asgi_redis
     graphql_ws
