Django 3.0 compatibility via optional channels (#89)
* Make channels optional
* Tidy up requirements
* Sort out graphiql.html
* Only install channels when available for the example app
* Run channels-only tests too
* Use actions/setup-python@v2
* Selectively include Wagtail SiteMiddleware in the example app settings
* Lint

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,11 +30,16 @@ setup_requires =
 include_package_data = true
 packages = find:
 install_requires =
-    Django>=2.2, <2.3
+    Django>=2.2, <3.1
     wagtail>=2.5, <2.11
     graphene-django==2.7.1
     graphql-core==2.2.1
+    wagtail-headless-preview
+
+
+[options.extras_require]
+channels =
+    Django>=2.2, <2.3
     channels==1.1.8
     asgi_redis
     graphql_ws
-    wagtail-headless-preview
