--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,8 @@ classifiers =
   Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
+  Framework :: Wagtail
+  Framework :: Wagtail :: 2
   Topic :: Scientific/Engineering
 long_description = file:README.md
 long_description_content_type = text/markdown
