--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -9,6 +9,20 @@
   "imageSize": 100,
   "commit": true,
   "commitConvention": "angular",
-  "contributors": [],
+  "contributors": [
+    {
+      "login": "NathHorrigan",
+      "name": "Nathan Horrigan",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/13197111?v=4",
+      "profile": "https://github.com/NathHorrigan",
+      "contributions": [
+        "code",
+        "bug",
+        "doc",
+        "infra",
+        "maintenance"
+      ]
+    }
+  ],
   "contributorsPerLine": 7
 }
