--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -82,6 +82,16 @@
         "code",
         "bug"
       ]
+    },
+    {
+      "login": "tomdyson",
+      "name": "Tom Dyson",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/15543?v=4",
+      "profile": "https://wagtail.io/",
+      "contributions": [
+        "code",
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
