--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 Django>=2.2,<3.2
 wagtail>=2.5,<2.12
 wagtailmedia
-graphql-core>=2.2.1,<3
-graphene-django>=2.7.1, <2.14.0
+graphql-core>=3.1.2
+graphene-django>=3.0.0b6
 factory-boy==2.12.0
 wagtail-factories==2.0.0
 django-cors-headers==3.4.0
