--- a/setup.cfg
+++ b/setup.cfg
@@ -38,8 +38,8 @@ packages = find:
 install_requires =
     Django>=2.2, <3.2
     wagtail>=2.5, <2.12
-    graphene-django>=2.7.1, <2.14.0
-    graphql-core>=2.2.1, <3
+    graphene-django>=3.0.0b6
+    graphql-core>=3.1.2
     wagtail-headless-preview
 
 
