--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,6 +70,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
+      - name: Install dependencies
+        run: pip install wheel
       - name: Build
         run: python setup.py sdist bdist_wheel
       - name: Publish to PyPI
