--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,8 @@ name: CI
 on:
   push:
     branches: [main]
+    tags:
+      - v[0-9]+.[0-9]+.[0-9]+
   pull_request:
     branches: [main]
 
@@ -63,7 +65,7 @@ jobs:
           pip install .
 
   build_and_publish:
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    if: startsWith(github.ref, 'refs/tags/v')
     needs: [lint, test]
     runs-on: ubuntu-latest
     steps:
