Update tests to prevent failing with channels enabled

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -53,4 +53,4 @@ jobs:
           cd example
           rm db.sqlite3
           python manage.py migrate
-          python manage.py test home.test.test_subscriptions
+          python manage.py test
