docs: schema mutation subscription hooks (#174)
* add example of mutation hook usage

* Add working example to mutations hook

* A working example is always better

* Add basic test + generate unique slug when creating authors through mutation

* Update docs to match example

* Add example for subscriptions + docs

* Fix failing tests

* Add tests for subscriptions and update tests for mutations

* 🙄

* Remove leftover of previous subscription

* Add comment regarding usage of uuid in tests

* Update docs to match subscription example

* Revert "Fix failing tests"

This reverts commit 78df48b2f535406762fd864a163e22421afc7fc9.

* Update test to separate channels/without channels test

* Update tests to prevent failing with channels enabled

* Make subscription test optionnal if channels is not enabled

* Add comment regarding subscriptions enabled only with django channels

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,13 @@ jobs:
           pip install -r requirements-channels.txt
           pip install .
 
+      - name: Run Tests
+        run: |
+          cd example
+          rm db.sqlite3
+          python manage.py migrate
+          python manage.py test
+
   build_and_publish:
     if: startsWith(github.ref, 'refs/tags/v')
     needs: [lint, test]
