--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,8 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: ['3.6', '3.7', '3.8', '3.9']
+        wagtail-version: ['2.7', '2.8', '2.9', '2.10', '2.11', '2.12']
 
     steps:
       - uses: actions/checkout@v2
@@ -40,6 +41,7 @@ jobs:
       - name: Install Dependencies
         run: |
           pip install -r requirements.txt
+          pip install wagtail==${{ matrix.wagtail-version }}
           pip install .
 
       - name: Run Tests
