--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,10 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: ['3.6', '3.7', '3.8', '3.9']
-        wagtail-version: ['2.7', '2.8', '2.9', '2.10', '2.11', '2.12']
+        # python-version: ['3.6', '3.7', '3.8', '3.9']
+        python-version: ['3.6']
+        # wagtail-version: ['2.7', '2.8', '2.9', '2.10', '2.11', '2.12']
+        wagtail-version: ['2.7', '2.8']
 
     steps:
       - uses: actions/checkout@v2
