--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,8 +43,9 @@ jobs:
       - name: Install Dependencies
         run: |
           pip install -r requirements.txt
-          pip install wagtail==${{ matrix.wagtail-version }}
           pip install .
+          pip install wagtail==${{ matrix.wagtail-version }}
+          python -c "import wagtail; print(wagtail.__version__)"
 
       - name: Run Tests
         run: |
