--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
         # python-version: ['3.6', '3.7', '3.8', '3.9']
         python-version: ['3.6']
         # wagtail-version: ['2.7', '2.8', '2.9', '2.10', '2.11', '2.12']
-        wagtail-version: ['2.10']
+        wagtail-version: ['2.9', '2.10', '2.11']
 
     steps:
       - uses: actions/checkout@v2
