--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: ['3.6', '3.7', '3.8', '3.9']
-        wagtail-version: ['2.9', '2.10', '2.11', '2.12', '2.13']
+        wagtail-version: ['2.11', '2.12', '2.13', '2.14']
 
     steps:
       - uses: actions/checkout@v2
