--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,4 +1,4 @@
 python:
-   version: "3.7"
-   install:
-   - requirements: docs/requirements.txt
+    version: 3.7
+    pip_install: true
+requirements_file: null
