--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,6 @@ install_requires =
 [options.extras_require]
 channels =
     Django>=2.2, <3.2
-    channels==1.1.8
-    asgi_redis
+    channels==3.0.4
+    channels_redis==3.3.0
     graphql_ws
