--- a/requirements-channels.txt
+++ b/requirements-channels.txt
@@ -1,14 +1,6 @@
-Django>=2.2,<3.2
-wagtail>=2.5,<2.12
-graphene-django==2.7.1
-wagtailmedia
-graphql-core==2.2.1
-factory-boy==2.12.0
-wagtail-factories==2.0.0
-django-cors-headers==3.4.0
-wagtail-headless-preview==0.1.4
+-r ./requirements.txt
 
 # Channels-specific requirements
 channels==3.0.4
 channels_redis==3.3.0
-graphql_ws
+git+git://github.com/fabienheureux/graphql-ws@fix/channels-3-compatibility#egg=graphql-ws
