Remove 3.2 constraints on django version + add comment regarding graphiql version

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,7 +36,7 @@ setup_requires =
 include_package_data = true
 packages = find:
 install_requires =
-    Django>=2.2, <3.2
+    Django>=2.2
     wagtail>=2.11, <2.15
     graphene-django>=2.7.1, <2.14.0
     graphql-core>=2.2.1, <3
@@ -45,7 +45,7 @@ install_requires =
 
 [options.extras_require]
 channels =
-    Django>=2.2, <3.2
+    Django>=2.2
     channels==3.0.4
     channels_redis==3.3.0
     graphql_ws
