--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,6 @@ install_requires =
 [options.extras_require]
 channels =
     Django>=2.2
-    channels==2.4.0
+    channels>=3.0<3.1
     channels_redis==3.3.0
     graphql-ws==0.4.4
