--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,8 @@ author_email = nathan.horrigan@torchbox.com
 description = A Django app that speeds up and simplifies implementing a GraphQL endpoint!
 version = attr: grapple.__version__
 url = https://github.com/GrappleGQL/wagtail-grapple
+project_urls =
+    Changelog = https://github.com/GrappleGQL/wagtail-grapple/blob/main/CHANGELOG.md
 keywords =
   wagtail
   django
