fix: docker build cannot find ../requirements
- copy actual requirements to example folder instead of depending
   on chaining, the parent path isn't available in the docker build
   context.
- add missing wagtail-grapple requirement in requirements, I used the
   current version in pip, there is probably a better way to require it
   into the docker file.
- include channels requirements

--- a/example/Dockerfile
+++ b/example/Dockerfile
@@ -6,10 +6,12 @@ LABEL maintainer="hello@wagtail.io"
 ENV PYTHONUNBUFFERED 1
 ENV DJANGO_ENV dev
 
+COPY ./requirements-channels.txt /code/requirements-channels.txt
 COPY ./requirements.txt /code/requirements.txt
+
 RUN pip install --upgrade pip
 # Install any needed packages specified in requirements.txt
-RUN pip install -r /code/requirements.txt
+RUN pip install -r /code/requirements-channels.txt
 RUN pip install gunicorn
 
 # Copy the current directory contents into the container at /code/
