--- a/example/requirements-channels.txt
+++ b/example/requirements-channels.txt
@@ -1,5 +1,5 @@
-# Project channel requirements
--r ../requirements-channels.txt
-
-# Local development requirements
 -r ./requirements.txt
+
+# Channels-specific requirements
+graphql-ws==0.4.4
+channels>=3.0, <3.1
