--- a/example/requirements.txt
+++ b/example/requirements.txt
@@ -1,8 +1,11 @@
-# Test requirements.
-black==19.3b0
-
-# Your app requirements.
--r ../requirements.txt
-
-# Your app in editable mode.
--e ../
+Django>=2.2,<4.0
+wagtail>=2.11,<2.16
+wagtailmedia
+graphql-core>=2.2.1,<3
+graphene-django>=2.7.1, <2.14.0
+factory-boy==2.12.0
+wagtail-factories==2.0.0
+django-cors-headers==3.4.0
+wagtail-headless-preview==0.1.4
+pre-commit==2.15.0
+wagtail-grapple==0.12.0
