--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,8 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: ['3.6', '3.7', '3.8', '3.9', '3.10']
-        wagtail-version: ['2.11', '2.12', '2.13', '2.14', '2.15']
+        python-version: ['3.7', '3.8', '3.9', '3.10']
+        wagtail-version: ['2.14', '2.15', '2.16']
 
     steps:
       - uses: actions/checkout@v2
