--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,6 @@ keywords =
 classifiers =
   Development Status :: 4 - Beta
   Intended Audience :: Science/Research
-  Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
@@ -31,14 +30,14 @@ license_files =
   LICENSE.txt
 
 [options]
-python_requires = >= 3.6
+python_requires = >= 3.7
 setup_requires =
   setuptools >= 40.6
   pip >= 10
 include_package_data = true
 packages = find:
 install_requires =
-    Django>=3.0
+    Django>=3.0,<4.0
     wagtail>=2.14, <2.17
     graphene-django>=2.7.1, <2.14.0
     graphql-core>=2.2.1, <3
@@ -47,7 +46,7 @@ install_requires =
 
 [options.extras_require]
 channels =
-    Django>=3.0
+    Django>=3.0,<4.0
     channels>=3.0, <3.1
     channels_redis==3.3.0
     graphql-ws==0.4.4
