--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,21 @@ repos:
       - id: black
         language_version: python3.8
         args: ['--target-version', 'py38']
+  - repo: https://github.com/pycqa/isort
+    # isort config is in setup.cfg
+    rev: 5.10.1
+    hooks:
+      - id: isort
+        language_version: python3
+  - repo: https://github.com/pycqa/flake8
+    # flake8 config is in setup.cfg
+    rev: 4.0.1
+    hooks:
+      - id: flake8
+        additional_dependencies:
+          - flake8-bugbear
+          - flake8-comprehensions
+          - flake8-assertive
   - repo: https://github.com/asottile/blacken-docs
     rev: v1.12.1
     hooks:
