--- a/setup.cfg
+++ b/setup.cfg
@@ -50,3 +50,16 @@ channels =
     channels>=3.0, <3.1
     channels_redis==3.3.0
     graphql-ws==0.4.4
+
+[flake8]
+select = C,E,F,W,B,I
+ignore = E203,E501,W503
+exclude=migrations,dist,build,venv,node_modules,.tox,venv,.venv,.git
+max-line-length=88
+
+[isort]
+profile=black
+skip=migrations,.git,__pycache__,LC_MESSAGES,locale,build,dist,.github,.tox,venv
+blocked_extensions=rst,html,js,svg,txt,css,scss,png,snap,tsx,sh
+known_first_party=grapple
+default_section=THIRDPARTY
