--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,9 +2,16 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.0.1
     hooks:
-      - id: trailing-whitespace
-      - id: end-of-file-fixer
       - id: check-yaml
+      - id: check-toml
+      - id: trailing-whitespace
+      - id: check-merge-conflict
+      - id: check-byte-order-marker
+      - id: check-case-conflict
+      - id: check-json
+      - id: debug-statements
+      - id: detect-private-key
+      - id: end-of-file-fixer
       - id: check-added-large-files
   - repo: https://github.com/psf/black
     rev: 22.1.0
@@ -30,5 +37,14 @@ repos:
   - repo: https://github.com/asottile/blacken-docs
     rev: v1.12.1
     hooks:
-    -   id: blacken-docs
+      - id: blacken-docs
         additional_dependencies: [black==22.1.0]
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    # prettier config is in '.prettierrc.toml' and '.prettierignore'
+    rev: v2.5.1
+    hooks:
+      - id: prettier
+  - repo: https://github.com/rtts/djhtml
+    rev: v1.4.10
+    hooks:
+      - id: djhtml
