--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,5 @@
+default_language_version:
+  python: python3.8
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.0.1
@@ -17,14 +19,11 @@ repos:
     rev: 22.3.0
     hooks:
       - id: black
-        language_version: python3.8
-        args: ['--target-version', 'py38']
   - repo: https://github.com/pycqa/isort
     # isort config is in setup.cfg
     rev: 5.10.1
     hooks:
       - id: isort
-        language_version: python3
   - repo: https://github.com/pycqa/flake8
     # flake8 config is in setup.cfg
     rev: 4.0.1
