--- a/setup.cfg
+++ b/setup.cfg
@@ -63,3 +63,6 @@ skip=migrations,.git,__pycache__,LC_MESSAGES,locale,build,dist,.github,.tox,venv
 blocked_extensions=rst,html,js,svg,txt,css,scss,png,snap,tsx,sh
 known_first_party=grapple
 default_section=THIRDPARTY
+
+[doc8]
+ignore=D000,D001
