--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -103,6 +103,17 @@
         "bug",
         "doc"
       ]
+    },
+    {
+      "login": "kbayliss",
+      "name": "Kyle Bayliss",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/3009233?v=4",
+      "profile": "https://github.com/kbayliss",
+      "contributions": [
+        "code",
+        "bug",
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
