--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -112,7 +112,8 @@
       "contributions": [
         "code",
         "bug",
-        "doc"
+        "doc",
+        "maintenance"
       ]
     }
   ],
