--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ universal = 1
 [metadata]
 name = wagtail-grapple
 author = Nathan Horrigan
-author_email = hellow@torchbox.com
+author_email = hello@torchbox.com
 maintainer = Dan Braghis
 maintainer_email = dan.braghis@torchbox.com
 description = A Django app that speeds up and simplifies implementing a GraphQL endpoint!
