Fix exact versions for graphene-django

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,7 +41,7 @@ packages = find:
 install_requires =
     Django>=3.0,<4.0
     wagtail>=2.14, <2.17
-    graphene-django>=3.0
+    graphene-django>=3.0.0b7
     graphql-core>=3.2.1
     wagtail-headless-preview
 
