--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Django>=3.0,<4.0
 wagtail>=2.14,<2.17
 wagtailmedia
 graphql-core>=3.2.1
-graphene-django>=3.0
+graphene-django>=3.0.0b7
 factory-boy==2.12.0
 wagtail-factories==2.0.0
 django-cors-headers==3.4.0
