--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ classifiers =
   Programming Language :: Python :: 3.9
   Framework :: Wagtail
   Framework :: Wagtail :: 2
+  Framework :: Wagtail :: 3
   Topic :: Scientific/Engineering
 long_description = file:README.md
 long_description_content_type = text/markdown
@@ -40,7 +41,7 @@ include_package_data = true
 packages = find:
 install_requires =
     Django>=3.0,<4.0
-    wagtail>=2.14, <2.17
+    wagtail>=2.14, <3.1
     graphene-django>=2.7.1, <2.14.0
     graphql-core>=2.2.1, <3
     wagtail-headless-preview
