--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ classifiers =
   Framework :: Wagtail
   Framework :: Wagtail :: 2
   Framework :: Wagtail :: 3
+  Framework :: Wagtail :: 4
   Topic :: Scientific/Engineering
 long_description = file:README.md
 long_description_content_type = text/markdown
@@ -41,7 +42,7 @@ include_package_data = true
 packages = find:
 install_requires =
     Django>=3.0,<4.0
-    wagtail>=2.15, <4.0
+    wagtail>=2.15, <4.1
     graphene-django>=2.7.1, <2.14.0
     graphql-core>=2.2.1, <3
     wagtail-headless-preview
