Update CHANGELOG, classifiers

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ author = Nathan Horrigan
 author_email = hello@torchbox.com
 maintainer = Dan Braghis
 maintainer_email = dan.braghis@torchbox.com
-description = A Django app that speeds up and simplifies implementing a GraphQL endpoint!
+description = A Wagtail package that speeds up and simplifies implementing a GraphQL endpoint!
 version = attr: grapple.__version__
 url = https://github.com/torchbox/wagtail-grapple
 project_urls =
@@ -23,9 +23,11 @@ classifiers =
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
+  Programming Language :: Python :: 3.10
   Framework :: Wagtail
   Framework :: Wagtail :: 2
   Framework :: Wagtail :: 3
+  Framework :: Wagtail :: 4
   Topic :: Scientific/Engineering
 long_description = file:README.md
 long_description_content_type = text/markdown
