--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,5 @@ graphene-django>=2.7.1, <2.16.0
 factory-boy==3.2.1
 wagtail-factories==3.1.0
 django-cors-headers==3.4.0
-wagtail-headless-preview==0.1.4
+wagtail-headless-preview
 pre-commit==2.15.0
