--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+permissions:
+  contents: read # to fetch code (actions/checkout)
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -17,7 +20,12 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: ['3.7', '3.8', '3.9', '3.10']
-        wagtail-version: ['2.15', '2.16', '3.0', 'main']
+        wagtail-version: ['2.15', '4.0', '4.1', 'main']
+        include:
+          - python-version: '3.11'
+            wagtail-version: '4.1'
+          - python-version: '3.11'
+            wagtail-version: 'main'
 
     steps:
       - uses: actions/checkout@v3
@@ -25,6 +33,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+          cache: 'pip'
 
       - name: Install Dependencies
         run: |
@@ -56,6 +65,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.8
+          cache: 'pip'
+          cache-dependency-path: |
+            requirements-channels.txt
 
       - name: Install Dependencies
         run: |
