--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,26 +43,29 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           cache: 'pip'
+          cache-dependency-path: |
+            tests/requirements.txt
 
       - name: Install Dependencies
         run: |
-          pip install -r requirements.txt
-          pip install .
+          cd tests
+          python -m pip install --upgrade pip
+          python -m pip install -r requirements.txt
 
       - name: Install Wagtail package
         if: ${{ matrix.wagtail-version != 'main' }}
         run: |
-          pip install wagtail==${{ matrix.wagtail-version }}
+          python -m pip install wagtail==${{ matrix.wagtail-version }}
 
       - name: Install Wagtail main
         if: ${{ matrix.wagtail-version == 'main' }}
         run: |
           git clone https://github.com/wagtail/wagtail.git
-          pip install ./wagtail
+          python -m pip install ./wagtail
 
       - name: Run Tests
         run: |
-          cd example
+          cd tests
           python manage.py migrate
           python manage.py test
 
@@ -76,15 +79,16 @@ jobs:
           python-version: 3.8
           cache: 'pip'
           cache-dependency-path: |
-            requirements-channels.txt
+            tests/requirements-channels.txt
 
       - name: Install Dependencies
         run: |
-          pip install -r requirements-channels.txt
-          pip install .
+          cd tests
+          python -m pip install --upgrade pip
+          python -m pip install -r requirements-channels.txt
 
       - name: Run Tests
         run: |
-          cd example
+          cd tests
           python manage.py migrate
           python manage.py test
