Move source to src/

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,3 @@
-[bdist_wheel]
-universal = 1
-
 [metadata]
 name = wagtail-grapple
 author = Nathan Horrigan
@@ -8,7 +5,7 @@ author_email = hello@torchbox.com
 maintainer = Dan Braghis
 maintainer_email = dan.braghis@torchbox.com
 description = A Wagtail package that speeds up and simplifies implementing a GraphQL endpoint!
-version = attr: grapple.__version__
+version = attr: src.grapple.__version__
 url = https://github.com/torchbox/wagtail-grapple
 project_urls =
     Changelog = https://github.com/torchbox/wagtail-grapple/blob/main/CHANGELOG.md
@@ -38,12 +35,16 @@ setup_requires =
   setuptools >= 41
   pip >= 19
 include_package_data = true
+package_dir=
+    =src
 packages = find:
 install_requires =
     wagtail>=4.1
     graphene-django>=3, <4
     wagtail-headless-preview
 
+[options.packages.find]
+where=src
 
 [options.extras_require]
 channels =
