--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,7 @@ name: Publish to PyPI
 
 on:
   release:
-    types: [released, prereleased]
+    types: [published]
 
 jobs:
   build_and_publish:
@@ -11,22 +11,23 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
-          python-version: '3.8'
+          python-version: '3.10'
+          cache: 'pip'
+          cache-dependency-path: '**/pyproject.toml'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install wheel
-
+          python -m pip install "flit>=3.8.0"
+          flit install --symlink
       - name: Build
-        run: python setup.py sdist bdist_wheel
+        run: flit build
 
-      - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          user: '__token__'
-          password: ${{ secrets.PYPI_API_TOKEN }}
+      - name: 🚀 Publish to live PyPI
+        env:
+          FLIT_USERNAME: '__token__'
+          FLIT_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+          FLIT_INDEX_URL: https://upload.pypi.org/legacy/
+        run: flit publish
