Update linting configuration

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,15 +37,10 @@ repos:
           - flake8-comprehensions
           - flake8-assertive
   - repo: https://github.com/asottile/blacken-docs
-    rev: v1.12.1
+    rev: 1.13.0
     hooks:
       - id: blacken-docs
-        additional_dependencies: [black==22.6.0]
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    # prettier config is in '.prettierrc.toml' and '.prettierignore'
-    rev: v3.0.0-alpha.4
-    hooks:
-      - id: prettier
+        additional_dependencies: [black==22.12.0]
   - repo: https://github.com/rtts/djhtml
     rev: v1.5.2
     hooks:
