--- a/setup.cfg
+++ b/setup.cfg
@@ -59,6 +59,7 @@ channels =
 [flake8]
 select = C,E,F,W,B,I
 ignore = E203,E501,W503
+extend-ignore = B028
 exclude=migrations,dist,build,venv,node_modules,.tox,venv,.venv,.git
 max-line-length=88
 
