--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,8 +34,7 @@ classifiers = [
 dynamic = ["version"]
 requires-python = ">=3.8"
 dependencies = [
-    "Django>=3.0,<4.0",
-    "Wagtail>=2.15,<5.0",
+    "wagtail>=4.1",
     "graphene-django>=3,<4",
     "wagtail-headless-preview"
 ]
@@ -44,8 +43,6 @@ dependencies = [
 channels = [
     "Django>=3.2,<4.0",
     "channels>=3.0,<3.1",
-    "channels_redis==3.3.0",
-    "graphql-ws>=0.4.4,<0.5"
 ]
 
 [project.urls]
@@ -72,7 +69,7 @@ include = ["LICENSE"]
 profile = "black"
 skip = [".git",".github",".tox",".venv", "__pycache__","LC_MESSAGES","build","dist","docs","locale","migrations","venv"]
 blocked_extensions = ["rst", "md", "html", "svg", "txt", "css", "scss", "png", "sh"]
-known_first_party = "grapple"
+known_first_party = ["grapple", "testapp"]
 default_section = "THIRDPARTY"
 
 [tool.doc8]
