--- a/tests/requirements-channels.txt
+++ b/tests/requirements-channels.txt
@@ -1,7 +1,8 @@
-# Local development requirements
--r ./requirements.txt
-
 # Channels-specific requirements
 Django>=3.2,<4.0
+graphene-django>=3,<4
 channels>=3.0, <3.1
 Rx==3.2.0
+
+-r ./requirements-base.txt
+-e ../[channels]
