Add tox configuration

--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,19 +1,19 @@
 # Test requirements.
-black>=22.12.0
+black>=23.7.0
+ruff=0.0.285
 
 # Runtime requirements
-Django>=3.2,<4.2
-wagtail>=2.15,<5.0
+Django>=3.2,<5.0
+wagtail>=4.1
 graphene-django>=3.0.0
 factory-boy==3.2.1
-wagtail-factories>=4.0.0,<4.1.0
+wagtail-factories>=4.1.0
 django-cors-headers==3.4.0
 wagtailmedia>=0.13
 wagtail-headless-preview
-# simplified database configuration to support testing multiple DB engines in CI.
-dj-database-url==1.2.0
+dj-database-url==2.1.0
 # for postgres testing
-psycopg2==2.9.5
+psycopg2>=2.9.5,<3.0.0
 
 
 # Your app in editable mode.
