--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ change_dir = {tox_root}/tests
 
 deps =
     flit>=3.8
-
+    coverage[toml]>=7.0,<8.0
     factory-boy==3.2.1
     wagtail-factories>=4.1.0
     django-cors-headers==3.4.0
@@ -49,7 +49,19 @@ deps =
 install_command = python -Im pip install -U {opts} {packages}
 
 commands =
-    python manage.py test {posargs: -v 2}
+    python -m coverage run manage.py test {posargs: -v 2}
+
+[testenv:coverage-report]
+; a bit of a hack - we keep deps to a minimum, and move coverage data to the tox root for easier excludes
+deps =
+install_command = python -Im pip install -U "coverage[toml]>=7.0,<8.0"
+change_dir = {tox_root}
+allowlist_externals = mv
+pre_commands =
+    mv {tox_root}/tests/.coverage* {tox_root}/
+
+commands =
+    python -Im coverage report -m
 
 [testenv:wagtailmain]
 description = Test with latest Wagtail main branch
