--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 min_version = 4.0
 
 envlist =
-    py{38,39,310}-django{32,41}-wagtail{41,42,50,51}
+    py{38,39,310}-django{32,41}-wagtail{41,50,51}
     py{311}-django{41,42}-wagtail{50,51}
     interactive
 
@@ -29,7 +29,7 @@ change_dir = {tox_root}/tests
 
 deps =
     flit>=3.8
-
+    coverage[toml]>=7.0,<8.0
     factory-boy==3.2.1
     wagtail-factories>=4.1.0
     django-cors-headers==3.4.0
@@ -41,7 +41,6 @@ deps =
     django41: Django>=4.1,<4.2
     django42: Django>=4.2,<5.0
     wagtail41: wagtail>=4.1,<4.2
-    wagtail42: wagtail>=4.2,<5.0
     wagtail50: wagtail>=5.0,<5.1
     wagtail51: wagtail>=5.1,<5.2
     interactive: wagtail>=4.1
@@ -49,7 +48,19 @@ deps =
 install_command = python -Im pip install -U {opts} {packages}
 
 commands =
-    python manage.py test {posargs: -v 2}
+    python -m coverage run manage.py test {posargs: -v 2}
+
+[testenv:coverage-report]
+; a bit of a hack - we keep deps to a minimum, and move coverage data to the tox root for easier excludes
+deps =
+install_command = python -Im pip install -U "coverage[toml]>=7.0,<8.0"
+change_dir = {tox_root}
+allowlist_externals = mv
+pre_commands =
+    mv {tox_root}/tests/.coverage* {tox_root}/
+
+commands =
+    python -Im coverage report -m
 
 [testenv:wagtailmain]
 description = Test with latest Wagtail main branch
