--- a/tox.ini
+++ b/tox.ini
@@ -32,10 +32,11 @@ deps =
     coverage[toml]>=7.0,<8.0
     factory-boy==3.2.1
     wagtail-factories>=4.1.0
-    django-cors-headers==3.4.0
+    django-cors-headers>=4.2.0
     wagtailmedia>=0.13
     dj-database-url==2.1.0
     psycopg2>=2.9.5,<3.0.0
+    tblib==1.7.0
 
     django32: Django>=3.2,<3.3
     django41: Django>=4.1,<4.2
@@ -48,7 +49,7 @@ deps =
 install_command = python -Im pip install -U {opts} {packages}
 
 commands =
-    python -m coverage run manage.py test {posargs: -v 2}
+    python -m coverage run --parallel-mode manage.py test --parallel {posargs: -v 2}
 
 [testenv:coverage-report]
 ; a bit of a hack - we keep deps to a minimum, and move coverage data to the tox root for easier excludes
@@ -60,6 +61,7 @@ pre_commands =
     mv {tox_root}/tests/.coverage* {tox_root}/
 
 commands =
+    python -Im coverage combine
     python -Im coverage report -m
 
 [testenv:wagtailmain]
