Update tox config to run the custom page interface test with its own settings

--- a/tox.ini
+++ b/tox.ini
@@ -48,7 +48,8 @@ deps =
 install_command = python -Im pip install -U {opts} {packages}
 
 commands =
-    python -m coverage run manage.py test {posargs: -v 2}
+    python -m coverage run manage.py test {posargs: -v1} --exclude-tag=needs-custom-settings
+    python manage.py test -v1 --tag=needs-custom-settings --settings=settings_custom_page_interface
 
 [testenv:coverage-report]
 ; a bit of a hack - we keep deps to a minimum, and move coverage data to the tox root for easier excludes
