Improve tox matrix

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,8 @@ min_version = 4.0
 envlist =
     py{38,39,310}-django{32,41}-wagtail{41,50,51}
     py{311}-django{41,42}-wagtail{50,51}
-    py{311}-django{42}-wagtail{60}
+    py{311,312}-django{41,42}-wagtail{50,51,52}
+    py{311,312}-django{42,50}-wagtail60
     interactive
 
 [gh-actions]
@@ -13,6 +14,7 @@ python =
     3.9: py39
     3.10: py310
     3.11: py311
+    3.12: py312
 
 [gh-actions:env]
 DB =
@@ -46,9 +48,10 @@ deps =
     django32: Django>=3.2,<3.3
     django41: Django>=4.1,<4.2
     django42: Django>=4.2,<5.0
+    django50: Django>=5.0,<5.1
     wagtail41: wagtail>=4.1,<4.2
     wagtail50: wagtail>=5.0,<5.1
-    wagtail51: wagtail>=5.1,<5.2
+    wagtail52: wagtail>=5.2,<6.0
     wagtail60: wagtail>=6.0,<6.1
     interactive: wagtail>=4.1
 
