Add missing wagtail version in tox dep mapping and search promotions Query import

--- a/tox.ini
+++ b/tox.ini
@@ -51,6 +51,7 @@ deps =
     django50: Django>=5.0,<5.1
     wagtail41: wagtail>=4.1,<4.2
     wagtail50: wagtail>=5.0,<5.1
+    wagtail51: wagtail>=5.1,<5.2
     wagtail52: wagtail>=5.2,<6.0
     wagtail60: wagtail>=6.0,<6.1
     interactive: wagtail>=4.1
