Upgrade ruff and use it for formatting as well

--- a/ruff.toml
+++ b/ruff.toml
@@ -1,33 +1,40 @@
-target-version = "py38"
+extend-exclude = ["build"]
 
-exclude = ["dist","build","venv",".venv",".tox",".git"]
-
-select = [
+[lint]
+extend-select = [
     "B",   # flake8-bugbear
     "BLE", # flake8-blind-except
     "C4",  # flake8-comprehensions
     "DJ",  # flake8-django
     "E",   # pycodestyle errors
     "F",   # pyflakes
+    "FBT", # flake8-boolean-trap
     "I",   # isort
+    "PIE", # flake8-pie
     "PGH", # pygrep-hooks
     "RUF100",  # unused noqa
     "S",   # flake8-bandit
+    "SIM", # flake8-simplify
     "T20",  # flake8-print
     "UP",   # pyupgrade
     "W",    # pycodestyle warnings
     "YTT",   # flake8-2020
 ]
 
+extend-ignore = [
+    "E501",  # Line too long
+    "B028",  # function-call-in-default-argument
+]
+
 fixable = ["C4", "E", "F", "I", "UP"]
 
-# E501: Line too long
-ignore = ["E501","B028"]
-
-[per-file-ignores]
+[lint.per-file-ignores]
 "tests/**.py" = ["DJ008"]
 
-[isort]
+[lint.isort]
 known-first-party = ["grapple"]
 lines-between-types = 1
 lines-after-imports = 2
+
+[format]
+docstring-code-format = true
